<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_book_layout"
        android:layout_width="616dp"
        android:layout_height="365dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="218dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_book_title_header"
            android:layout_width="616dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_book_main_panel"
            android:layout_width="616dp"
            android:layout_height="300dp"
            android:background="@color/dark_purple"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_book_title_header" />

        <TextView
            android:id="@+id/add_book_text"
            android:layout_width="236dp"
            android:layout_height="36dp"
            android:layout_marginEnd="364dp"
            android:layout_marginBottom="312dp"
            android:text="Add Book to Library"
            android:textColor="@color/white"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/add_book_date"
            android:layout_width="343dp"
            android:layout_height="39dp"
            android:layout_marginEnd="-360dp"
            android:layout_marginBottom="-270dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/add_book_main_panel"
            app:layout_constraintEnd_toStartOf="@+id/add_book_main_panel" />

        <EditText
            android:id="@+id/add_book_name"
            android:layout_width="343dp"
            android:layout_height="39dp"
            android:layout_marginEnd="-360dp"
            android:layout_marginBottom="9dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/add_book_author"
            app:layout_constraintEnd_toStartOf="@+id/add_book_main_panel" />

        <EditText
            android:id="@+id/add_book_author"
            android:layout_width="343dp"
            android:layout_height="39dp"
            android:layout_marginEnd="-360dp"
            android:layout_marginBottom="9dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/add_book_tags"
            app:layout_constraintEnd_toStartOf="@+id/add_book_main_panel" />

        <EditText
            android:id="@+id/add_book_tags"
            android:layout_width="343dp"
            android:layout_height="39dp"
            android:layout_marginEnd="-360dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/add_book_genres"
            app:layout_constraintEnd_toStartOf="@+id/add_book_main_panel" />

        <EditText
            android:id="@+id/add_book_genres"
            android:layout_width="343dp"
            android:layout_height="39dp"
            android:layout_marginEnd="-360dp"
            android:layout_marginBottom="9dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/add_book_date"
            app:layout_constraintEnd_toStartOf="@+id/add_book_main_panel" />

        <Button
            android:id="@+id/add_book_create_btn"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginStart="156dp"
            android:layout_marginBottom="-200dp"
            android:background="@color/dark_purple"
            android:drawableTop="@drawable/baseline_arrow_forward_24"
            app:layout_constraintBottom_toTopOf="@+id/add_book_main_panel"
            app:layout_constraintStart_toEndOf="@+id/add_book_author" />

        <Button
            android:id="@+id/add_book_cancel_btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/dark_purple"
            android:drawableTop="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/add_book_name_text"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:text="Title"
            android:textColor="@color/white"
            android:textColorLink="#FFFFFF"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toEndOf="@+id/add_book_name"
            app:layout_constraintTop_toBottomOf="@+id/add_book_title_header" />

        <TextView
            android:id="@+id/add_book_name_text"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="107dp"
            android:text="Author"
            android:textColor="@color/white"
            android:textColorLink="#FFFFFF"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/add_book_name_text"
            app:layout_constraintStart_toEndOf="@+id/add_book_author" />

        <TextView
            android:id="@+id/add_book_name_text"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="60dp"
            android:text="Tags"
            android:textColor="@color/white"
            android:textColorLink="#FFFFFF"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/add_book_name_text"
            app:layout_constraintStart_toEndOf="@+id/add_book_tags" />

        <TextView
            android:id="@+id/add_book_name_text"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:text="Genres"
            android:textColor="@color/white"
            android:textColorLink="#FFFFFF"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/add_book_name_text"
            app:layout_constraintStart_toEndOf="@+id/add_book_genres" />

        <TextView
            android:id="@+id/add_book_name_text"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="-270dp"
            android:text="Date"
            android:textColor="@color/white"
            android:textColorLink="#FFFFFF"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/add_book_main_panel"
            app:layout_constraintStart_toEndOf="@+id/add_book_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>