<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Authentication.RegisterActivity">


    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="498dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_input" />

    <TextView
        android:id="@+id/register_username_title"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:layout_marginTop="180dp"
        android:text="User Name"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="282dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="Confirm Password"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_confirm_password_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_title"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/register_password_title"
        android:layout_width="154dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="Password"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_password_input"
        app:layout_constraintStart_toStartOf="@+id/register_username_title"
        app:layout_constraintTop_toBottomOf="@+id/register_username_title"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="498dp"
        android:layout_height="69dp"
        android:layout_marginTop="168dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="73dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_input">

        <Button
            android:id="@+id/Create_register_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginEnd="552dp"
            android:padding="0dp"
            android:text="SIGN UP"
            android:textSize="25sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="245dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Register"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_confirm_password_input"
        android:layout_width="500dp"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input"
        app:layout_constraintVertical_bias="0.071" />

    <FrameLayout
        android:id="@+id/register_librarian_mode_window"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/librarian_mode_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="Librarian"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/register_user_mode_btn_window"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_button"
        app:layout_constraintEnd_toEndOf="@+id/register_librarian_mode_window"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_librarian_mode_window"
        app:layout_constraintTop_toBottomOf="@+id/register_librarian_mode_window">

        <Button
            android:id="@+id/user_mode_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="Reader"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>